实施重构2
